--- a/TuscanyVilla/index.html
+++ b/TuscanyVilla/index.html
@@ -40,7 +40,7 @@
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li style="background-color:#82bfd8"><a>All Villas</a></li>
+                    <li style="background-color:#82bfd8; color:white"><a>All Villas</a></li>
                     
                 </ul>
             </div><!-- /.navbar-collapse -->
@@ -50,12 +50,12 @@
     <div class="jumbotron FirstSection">
         <div class="container fluid">
             <div class="row">
-                <div class="col-push-2 col-sm-2 col-md-8 col-lg-8">
+                <div class="col-push-2 col-sm-4 col-md-4 col-lg-8">
                     <img class="img-responsive coverPicture" src="images/tuscany-villas-sant-anna.jpg" />
                     <p class="largeCoverText">FEELS LIKE HOME AWAY FROM HOME</p>
                     <p class="smallCoverText" style="font-size:12px; font-weight:lighter" > FIND YOUR EXCLUSIVE TUSCANY VILLA FOR THE HOLIDAYS</p>
                 </div>
-                <div class="col-sm-2 col-md-4 col-lg-4">
+                <div class="col-sm-4 col-md-4 col-lg-4">
                     <img class="img-responsive blueMap" src="images/Versilia.jpg" />
                     <p class="VersiliaTextLg">FIND YOUR TUSCANY VILLA</p>
                     <p class="VersiliaTextSm" style="font-size:12px; font-weight:lighter">EXPLORE THE MAP</p>
@@ -64,7 +64,7 @@
         </div>
     </div>
     <br />
-  
+  <!--First Row-->
         <div class="row FirstSection">
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" style="border: 2px solid white;
    margin: 0px;
@@ -91,6 +91,7 @@
                 <img class="img-responsive" src="images/42-348x348.jpg" />
             </div>
         </div>
+    <!--SecondRow-->
     <div class="row SecondSection">
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" style="border: 2px solid white;
    margin: 0px;
@@ -98,7 +99,7 @@
    height: 348px;
    left:100px;
    width: 348px;">
-            <img class="img-responsive" src="images/314-348x348.jpg">
+            <img class="img-responsive" src="images/blank_Slate.jpg"/>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4" style="border: 2px solid white;
    margin: 0px;
@@ -106,7 +107,7 @@
    height: 348px;
    left:100px;
    width: 348px;">
-            <img class="img-responsive" src="images/3b-348x348.jpg" />
+            <img class="img-responsive" src="images/Villa-Rucellai-Toscani-2812-2-348x348.jpg"/>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4" style="border: 2px solid white;
    margin: 0px;
@@ -114,9 +115,10 @@
    height: 348px;
    left:100px;
    width: 348px;">
-            <img class="img-responsive" src="images/42-348x348.jpg" />
+            <img class="img-responsive" src="images/blank_Slate.jpg"/>
         </div>
     </div>
+    <!--ThirdRow-->
     <div class="row ThirdSection">
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" style="border: 2px solid white;
    margin: 0px;
@@ -124,7 +126,7 @@
    height: 348px;
    left:100px;
    width: 348px;">
-            <img class="img-responsive" src="images/314-348x348.jpg">
+            <img class="img-responsive" src="images/blank_Slate.jpg" />
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4" style="border: 2px solid white;
    margin: 0px;
@@ -132,7 +134,7 @@
    height: 348px;
    left:100px;
    width: 348px;">
-            <img class="img-responsive" src="images/3b-348x348.jpg" />
+            <img class="img-responsive" src="images/bluebox.jpg" />
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4" style="border: 2px solid white;
    margin: 0px;
@@ -140,7 +142,7 @@
    height: 348px;
    left:100px;
    width: 348px;">
-            <img class="img-responsive" src="images/42-348x348.jpg" />
+            <img class="img-responsive" src="images/partners.jpg" />
         </div>
     </div>
     
